Crash on exit (freeing nodes) #37939

Closed
opened 2013-12-25 09:05:51 +01:00 by Campbell Barton · 8 comments

Load this file, on exist free_localized_node_groups is accessing freed node tree.

@Sergey's patch to deal with a similar bug with pose data can be extended to fix this too.

Backtrace:

- 7  0x0000000001bc5e37 in free_localized_node_groups (ntree=0x60300000c248) at /src/blender/source/blender/blenkernel/intern/node.c:1682
- 8  0x0000000001bc5fe5 in ntreeFreeTree_ex (ntree=0x60300000c248, do_id_user=1) at /src/blender/source/blender/blenkernel/intern/node.c:1718
- 9  0x0000000001bc632a in ntreeFreeTree (ntree=0x60300000c248) at /src/blender/source/blender/blenkernel/intern/node.c:1777
- 10 0x0000000001b0af75 in BKE_libblock_free (lb=0x60500000c648, idv=0x60300000c248) at /src/blender/source/blender/blenkernel/intern/library.c:953
- 11 0x0000000001b0b3b4 in free_main (mainvar=0x60500000c088) at /src/blender/source/blender/blenkernel/intern/library.c:1030
Load this file, on exist `free_localized_node_groups` is accessing freed node tree. @Sergey's patch to deal with a similar bug with pose data can be extended to fix this too. Backtrace: - 7 0x0000000001bc5e37 in free_localized_node_groups (ntree=0x60300000c248) at /src/blender/source/blender/blenkernel/intern/node.c:1682 - 8 0x0000000001bc5fe5 in ntreeFreeTree_ex (ntree=0x60300000c248, do_id_user=1) at /src/blender/source/blender/blenkernel/intern/node.c:1718 - 9 0x0000000001bc632a in ntreeFreeTree (ntree=0x60300000c248) at /src/blender/source/blender/blenkernel/intern/node.c:1777 - 10 0x0000000001b0af75 in BKE_libblock_free (lb=0x60500000c648, idv=0x60300000c248) at /src/blender/source/blender/blenkernel/intern/library.c:953 - 11 0x0000000001b0b3b4 in free_main (mainvar=0x60500000c088) at /src/blender/source/blender/blenkernel/intern/library.c:1030
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton self-assigned this 2013-12-25 09:05:51 +01:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by blender/blender-addons-contrib@d9e0a94675

This issue was referenced by blender/blender-addons-contrib@d9e0a9467503dc6cd004c67a118d315f2238f3b0

This issue was referenced by d9e0a94675

This issue was referenced by d9e0a9467503dc6cd004c67a118d315f2238f3b0
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Closed by commit d9e0a94675.

Closed by commit d9e0a94675.

This issue was referenced by blender/blender-addons-contrib@fa9b5d5449

This issue was referenced by blender/blender-addons-contrib@fa9b5d544993a619347e555ee708078913b7ec97

This issue was referenced by fa9b5d5449

This issue was referenced by fa9b5d544993a619347e555ee708078913b7ec97
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37939
No description provided.