Fix T37939: Crash on exit (reading from freed node trees)